@@ -374,7 +374,7 @@ Gnubiff_Options::add_options_mailbox (void)
 								   "name_entry"));
 	// DELAY
 	add_option (new Option_UInt ("delay", OPTGRP_MAILBOX,
-		"Time interval between mail checks for network mailboxes when "
+		"Time interval between mail checks for mailboxes that use "
 		"polling (in seconds).",
 								 180, OPTFLG_CHANGE));
 	// DELAY_MINUTES
@@ -488,8 +488,16 @@ Gnubiff_Options::add_options_mailbox (void)
 		"access and modified time if this option is set to true.\n"
 		"Note: Setting this option to true may result in some new mails not "
 		"being noticed because of race conditions.\n"
-		"This option is used for the file protocol only.",
+		"This option is used for the file protocols only.",
 								 false));
+	// FILE_FAM_ENABLE
+	add_option (new Option_Bool ("file_fam_enable", OPTGRP_MAILBOX,
+		"Shall the mailbox be monitored by the FAM demon (or a substitution "
+		"like GAMIN)? If this option is set to false, polling will be used "
+		"instead. The time between two checks is determined by the "
+		"\"delay\" option of this mailbox.\n"
+		"This option is used for the file protocols only.",
+								 true));
 }
 
 /// Add options for the appearance of the popup
