@@ -94,7 +94,9 @@ public:
 	// ========================================================================
 	//  main
 	// ========================================================================
-	void start (void);								// start method
+	void start (void);
+	void start_fam_monitoring (void);
+	void fam_close (void);
 	void fam_monitoring (void) throw (local_err);
 	void stop (void);								// stop method
 	virtual std::string file_to_monitor (void);
