@@ -45,6 +45,8 @@ Version 2.2.0
         providing a patch)
    - Added Jan Blunck to contributors
    - Updated German translation
+   - Feature: Ability to switch off FAM monitoring in favor of polling (option
+        "mailbox/file_fam_enable")
  * Roland Stigge
    - Added reference to info pages in man page (Debian bug #335193)
 
